--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -16,6 +16,10 @@ footer {
     margin: 10px;
 }
 
+table {
+    width: 100%;
+}
+
 table,
 th,
 td {
@@ -41,4 +45,37 @@ td {
 
 tr:nth-child(even) {
     background-color: lightgray;
+}
+
+/* Form Style */
+form {
+    width: 99%;
+}
+
+form div {
+    margin-bottom: 18px;
+}
+
+form input[type="radio"] {
+    margin-left: 18px;
+}
+
+form input[type="text"], form input[type="password"], form input[type="email"] {
+    width: 100%;
+    margin-top: 10px;
+}
+
+textarea {
+    margin-top: 10px;
+    width: 100%;
+    height: 266px;
+    resize: none;
+}
+
+form input[type="submit"] {
+    padding: 15px;
+    background-color: green;
+    border: solid 1px black;
+    font-weight: bold;
+    color: white;
 }
